[project]
name = "ragify"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "boto3>=1.37.30",
    "coloredlogs>=15.0.1",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.12",
    "langchain-qdrant>=0.2.0",
    "langchain-tavily>=0.1.5",
    "langgraph>=0.3.27",
    "pydantic-settings>=2.8.1",
    "pymongo>=4.12.0",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
]
